# call_kbot_embedding_data

./: .env.example  .gitignore  README.md  embed.py  pyproject.toml  requirements.txt  test.py
